--- a/search/index.html
+++ b/search/index.html
@@ -115,7 +115,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/Jessegoodspeed" title="Jessegoodspeed"><svg class="svg-icon grey"><use xlink:href="/JeGo/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/Jessegoodspeed" title="Jessegoodspeed"><svg class="svg-icon grey"><use xlink:href="/JeGo/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://www.linkedin.com/in/https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjessegoodspeed%2F" title="https://www.linkedin.com/in/jessegoodspeed/"><svg class="svg-icon grey"><use xlink:href="/JeGo/assets/minima-social-icons.svg#linkedin"></use></svg></a></li></ul>
 </div>
 
   </div>
